--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "sgm-test-task",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Den4yk76.github.io/sgm-test-task",
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
@@ -23,7 +22,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy":"npm run build",
-    "deploy": "gh-pages -d build" 
+    "deploy": "netlify deploy -p"
   },
   "eslintConfig": {
     "extends": [
